ingest/live-origin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: live-origin-svc
  namespace: default
  annotations: 
    cloud.google.com/neg: '{"ingress": true}' 
    cloud.google.com/backend-config: '{"default": "live-origin-backendconfig"}'
spec:
  selector:
    app: ingest
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
